fix: Submit transaction modal buttons unaligned

--- a/webapp/src/components/Modals/SubmitTransactionModal/SubmitTransactionModal.module.css
+++ b/webapp/src/components/Modals/SubmitTransactionModal/SubmitTransactionModal.module.css
@@ -1,4 +1,5 @@
 .actions {
+  display: flex;
   flex-direction: column;
   align-items: center;
 }
